--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@400;600;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  scroll-behavior: smooth;
+  font-family: "Poppins", sans-serif;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App > .navbar {
+  background-color: #50514F;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar-nav > .nav-link:hover {
+  color: #FFE066;
 }
 
-.App-header {
+.container > .navbar-brand {
+  color: #696969;
+}
+
+.container > .navbar-brand:hover {
+  
+  color: #FFE066;
+}
+
+/* Home container
+---------------------------------- */
+
+.home {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: url(./images/church-inside.jpg);
+  max-width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  height: 100vh;
+  color: #fff;
 }
 
-.App-link {
-  color: #61dafb;
+.home > h1 {
+  text-shadow: #fff 0 0 10px;
+  font-size: 3rem;
+  padding: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
