--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,6 @@
   min-height: 100vh;
   display: flex;
   align-items: center;
-  justify-content: center;
   background: url(./images/church-inside.jpg);
   max-width: 100%;
   background-size: cover;
@@ -47,6 +46,8 @@
   background-position: center;
   height: 100vh;
   color: #fff;
+  flex-direction: column;
+  padding-bottom: 50px;
 }
 
 .home > h1 {
@@ -55,4 +56,109 @@
   padding: 10px;
 }
 
+.sub-title {
+  background-color: rgba(120, 116, 116, .5);
+  padding: 5px;
+}
 
+/* Mass
+------------------------------------ */
+
+.mass {
+  padding: 20px 0;
+  background-color: #D8DBE2;
+  font-size: 1rem;
+  min-height: 100vh;
+  padding-top: 80px;
+  text-justify: auto;
+  display: flex;
+  align-items: center;
+}
+
+.mass-img {
+  padding-bottom: 20px;
+}
+
+.mass-img > img {
+  height: 550px;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.mass .mass-text {
+  text-align: justify;
+}
+
+.mass .mass-title {
+  color: #373F51;
+  border-bottom: 1px solid #373F51;
+  text-align: center;
+}
+
+.mass .sub-title {
+  color: #373F51;
+  border-bottom: 1px solid #373F51;
+  text-align: center;
+}
+
+.mass h4 {
+  color: #58A4B0;
+}
+
+/* Contact */
+
+.contact {
+  background-color: #282c34;
+  color: #fff;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  max-width: 100%;
+  height: 50vh;
+}
+
+.contact-container {
+  margin-top: 30px;
+}
+
+.contact-info {
+  text-align: start;
+}
+
+.contact .contact-button {
+  float: left;
+  margin-top: 10px;
+}
+
+.icon {
+  margin-bottom: 10px;
+}
+
+.title {
+  color: #fff;
+  border-bottom: 2px solid #fff;
+}
+
+@media (max-width: 995px) {
+  .logo-title {
+    display: none;
+  }
+
+  .mass-img img {
+    height: 300px;
+  }
+
+
+  .events .row, .contact .row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .form-textarea {
+    height: auto;
+  }
+}
